# SWC-shortener

./: .env.example  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
docker/: .gitignore
src/: manage.py
src/apps/shortener/: errors.py  models.py  serializers.py  service.py  shortener.py  urls.py  views.py
src/apps/shortener/migrations/: 0001_initial.py
src/apps/shortener/tests/: factories.py  test_serializers.py  test_service.py  test_shortener.py  test_views.py
src/swc_shortener/: asgi.py  settings.py  urls.py  wsgi.py
